Button and text learning

--- a/buttons.html
+++ b/buttons.html
@@ -3,8 +3,10 @@
     background-color: rgb(200, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 105px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    padding-bottom:8px;
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
@@ -25,8 +27,8 @@
     color: rgb(41, 118, 211);
     padding-left: 16px;
     padding-right: 16px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     border-radius: 2px;
     cursor: pointer; 
     margin-right: 8px;
@@ -47,8 +49,10 @@
     background-color: rgb(16, 146, 227);
     color: white;
     border: none;
-    height: 36px;
-    width: 80px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top:8px;
+    padding-bottom: 6px;
     border-radius: 18px;
     font-weight: bold;
     font-size: 15px;
@@ -196,6 +200,48 @@
     color: rgb(0,118,o);
     font-weight: bold;
   }
+  .back-buttom {
+    padding-top: 8px;
+    padding-bottom: 7px;
+  }
+  .next-buttom {
+    padding-top: 8px;
+    padding-bottom: 7px;
+  }
+  .stretch-button {
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 6px 14px;
+    transition: padding 1s;
+    text-align: center;
+    cursor: pointer;
+  }
+  .stretch-button:hover {
+    padding: 8px 20px;
+  }
+  .shadow-button {
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    transition: box-shadow 0.15s;
+  }
+  .shadow-button:hover {
+    box-shadow:5px 5px 5px rgba(0, 0, 0, 0.25);
+  }
+  .one-two-three-button {
+    background-color: green;
+    color: white;
+    padding: 8px 10px;
+    border: none;
+    cursor: pointer;
+    transition: padding 0.15s;
+    margin-right: 8px;
+  }
+  .one-two-three-button:hover {
+    padding: 8px 14px;
+  }
 </style>
 
 <button class="subscribe-button">
@@ -268,6 +314,48 @@
 
 <button class="buy-now-button">
   Buy now
+</button>
+
+<hr>
+
+<button>
+  Back
+</button>
+
+<a href="https://in.search.yahoo.com/search?fr=mcafee&type=E210IN885G0&p=articke" target="_blank">1</a>
+<a href="https://in.search.yahoo.com/search;_ylt=Awr1QhiJQeVnZsICL327HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BhZ2luYXRpb24-?fr=mcafee&type=E210IN885G0&p=articke&b=8&pz=7&xargs=0" target="_blank">2</a>
+<a href="https://in.search.yahoo.com/search;_ylt=Awrx.JumQeVnp8YCGfq7HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BhZ2luYXRpb24-?fr=mcafee&type=E210IN885G0&p=articke&b=15&pz=7&xargs=0">3</a>
+<a href="https://in.search.yahoo.com/search;_ylt=AwrKAkm1QeVnaMEC0wu7HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BhZ2luYXRpb24-?fr=mcafee&type=E210IN885G0&p=articke&b=22&pz=7&xargs=0">4</a>
+<a href="https://in.search.yahoo.com/search;_ylt=AwrKAFvFQeVnw8kCKye7HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BhZ2luYXRpb24-?fr=mcafee&type=E210IN885G0&p=articke&b=29&pz=7&xargs=0">5</a>
+
+<button>
+  Next
+</button>
+
+<hr>
+
+<button class="stretch-button">
+  Stretch
+</button>
+
+<hr>
+
+<button class="shadow-button">
+  Shadow
+</button>
+
+<hr>
+
+<button class="one-two-three-button">
+  One
+</button>
+
+<button class="one-two-three-button">
+  Two
+</button>
+
+<button class="one-two-three-button">
+  Three
 </button>
 
 
